--- a/testing/index.html
+++ b/testing/index.html
@@ -19,6 +19,6 @@
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <!-- Your external JS file (place it after Leaflet and before closing body) -->
-  <script src="map.js"></script>
+  <script src="/testing/map.js"></script>
 </body>
 </html>
