--- a/testing/index.html
+++ b/testing/index.html
@@ -7,7 +7,7 @@
 
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <link rel="stylesheet" src="/bs_makermap/testing/style.css">
+  <link rel="stylesheet" href="/bs_makermap/testing/style.css">
   <style>
     #map { height: 100vh; }
   </style>
